--- a/html/about.html
+++ b/html/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=bb623b6838dea' async='true'></script> 
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-137702322-2"
