--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=bb623b6838dea' async='true'></script> 
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-137702322-2"
@@ -2638,7 +2639,7 @@
         </p>
       </div>
     </footer>
-
+<!-- 
     <div class="banner">
       <div
         id="beta-form"
@@ -2674,7 +2675,7 @@
           Close
         </button>
       </div>
-    </div>
+    </div> -->
     <script
       defer
       src="https://d33wubrfki0l68.cloudfront.net/js/eef0025cd862cc3e03f8ff60b8943386d5df5d14/app.js"
