--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=bb623b6838dea' async='true'></script> 
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-137702322-2"
@@ -16,6 +15,11 @@
 
       gtag("config", "UA-137702322-2");
     </script>
+    <script
+      id="pixel-script-poptin"
+      src="https://cdn.popt.in/pixel.js?id=bb623b6838dea"
+      async="true"
+    ></script>
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -96,11 +100,7 @@
       <!-- Desktop Navbar -->
       <div class="mobile-wrapper">
         <div class="mobile-nav container mobile-nav-container">
-            <img
-              src="/logo-no-background.png"
-              alt="company logo"
-              width="100px"
-            />
+          <img src="/logo-no-background.png" alt="company logo" width="100px" />
 
           <div aria-hidden="true" class="neon">
             <span>A</span>
@@ -2230,7 +2230,9 @@
           <div class="example-group">
             <div class="example">
               <img
-                srcset="/Neon_Retro_Stars_Marketing_Mockup_Website_Instagram_Post-removebg-preview(2).png"
+                srcset="
+                  /Neon_Retro_Stars_Marketing_Mockup_Website_Instagram_Post-removebg-preview(2).png
+                "
                 sizes="(max-width: 600px) 480px, 800px"
                 src="/Neon_Retro_Stars_Marketing_Mockup_Website_Instagram_Post-removebg-preview.png"
                 width="300px"
@@ -2606,7 +2608,6 @@
             </div>
             <a href="mailto:ohwdinfo@gmail.com">akoladeemmanuel14@gmail.com</a>
             <a href="tel:219-576-2539">(0911) 049-5116</a>
-            
           </div>
           <div class="footer-item">
             <h2>Navigation</h2>
@@ -2616,10 +2617,26 @@
             <a class="link-long" href="/html/services">Services</a>
             <a class="link-long" href="/#portfolio">Portfolio</a>
             <a class="link-long" href="/html/contact">Contact</a>
-            <a class="link-long" href="https://calendly.com/akoladeemmanuel14/30min"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-event" viewBox="0 0 16 16">
-  <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z"/>
-  <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
-</svg> Discuss Project</a>
+            <a
+              class="link-long"
+              href="https://calendly.com/akoladeemmanuel14/30min"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-calendar-event"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z"
+                />
+                <path
+                  d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"
+                />
+              </svg>
+              Discuss Project</a
+            >
           </div>
           <div class="footer-item">
             <h2>Services</h2>
@@ -2639,7 +2656,7 @@
         </p>
       </div>
     </footer>
-<!-- 
+    <!-- 
     <div class="banner">
       <div
         id="beta-form"
@@ -2700,7 +2717,6 @@
     </script>
   </body>
 </html>
-
 
 <!-- Building high-converting websites @ nnnnnn.com
 Creative WebDeveloper. ✨ Designing websites that convert
