--- a/html/about.html
+++ b/html/about.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=bb623b6838dea' async='true'></script> 
+    <script
+      id="pixel-script-poptin"
+      src="https://cdn.popt.in/pixel.js?id=bb623b6838dea"
+      async="true"
+    ></script>
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-137702322-2"
@@ -50,11 +54,12 @@
       defer
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
     ></script>
-
-    <title>Small Business Web Development | Oak Harbor Web Designs</title>
+    <title>
+      Small Business Web Design + Development | DigitalDreams Web Designs
+    </title>
   </head>
   <body>
-    <a class="skip" href="/html/about#main">skip to main content</a>
+    <a class="skip" href="/html/about.html#main">skip to main content</a>
 
     <header>
       <button
@@ -70,7 +75,7 @@
         <div class="mobile-nav container mobile-nav-container">
           <img
             id="mobile-logo"
-            src="https://d33wubrfki0l68.cloudfront.net/3745959f2d7eede91c7a6a8751368d2d234a7edd/b82b2/images/logo-light.png"
+            src="/logo-no-background.png"
             alt="mobile_company_logo"
             height="60"
           />
@@ -109,7 +114,7 @@
         <div class="navbar-menu">
           <div id="side-menu" class="side-nav">
             <img
-              src="https://d33wubrfki0l68.cloudfront.net/f525bebad8ec45967899542ab37f9756287e1bbf/b31d2/images/logo-light-desktop.png"
+              src="/logo-no-background.png"
               alt="company logo"
               width="100px"
             />
@@ -155,31 +160,28 @@
 
       <section id="about" class="section">
         <div class="container">
-          <img
-            src="https://d33wubrfki0l68.cloudfront.net/29e2f490352783f18f992f066765b955d6c05e18/4a515/images/ryan-headshot.jpg"
-            alt="headshot photo of ryan, owner of oak harbor web designs"
-          />
+          <img src="" alt="Kolade Image" />
           <div class="section-content">
-            <span>Oak Harbor Web Designs</span>
+            <span>DigitalDreams Web Designs</span>
             <h2>Giving Small Businesses The Big Business Treatment</h2>
             <p>
-              My name is Ryan P, I am the owner and sole developer of Oak Harbor
-              Web Designs. I got into programming after my wife had our first
-              child. I was and still am a stay-at-home dad, and I wanted a
-              career that I can do from home and still be there with the kids to
-              watch them grow up. So over the course of two years I taught
-              myself how to code websites the right way by hand and just started
-              calling small businesses to offer my help. <br /><br />
-              What I found was that a lot of small businesses don't have the
-              funds to spend thousands of dollars upfront on a new website. And
-              the ones that did, got taken advantage of and have a terrible
-              website that looks like it was built by someone in a dungeon and
-              haven't seen design trends for the last 10 years. They were in a
-              frustrating spot - they either can't afford a good website, and if
-              they can they don't know who to trust to make something great. So
-              I tweaked my business model to fit their needs. That's how I came
-              up with my $0 down and $150 a month model. It's more managable for
-              a small business to handle and won't hurt their bank accounts.
+              My name is Kolade, and I’m a Mechatronics Engineering graduate
+              with a deep passion for web development. I started this business
+              to provide for my family while pursuing a career I truly love.
+              Over the course of a year and a half, I immersed myself in
+              learning the intricacies of web development, mastering both coding
+              and design. With more than two years of experience and several
+              websites under my belt, I’ve refined my process to deliver
+              high-quality results. <br />
+
+              What I discovered is that many small businesses struggle to afford
+              a well-designed website. Those that can often end up with outdated
+              and ineffective designs from developers who don’t keep up with
+              modern trends. To address this, I’ve crafted a business model
+              tailored to their needs: $0 down and just $70 a month. This
+              approach allows small businesses to get the website they deserve
+              without straining their budgets, ensuring they have a strong
+              online presence without the financial burden.
             </p>
           </div>
         </div>
@@ -575,13 +577,13 @@
           <div class="footer-item image-box">
             <img
               class="footer-logo mobile-display"
-              src="https://d33wubrfki0l68.cloudfront.net/3745959f2d7eede91c7a6a8751368d2d234a7edd/b82b2/images/logo-light.png"
+              src="/logo-no-background.png"
               alt="oak harbor web designs logo"
               height="50"
             />
             <img
               class="footer-logo desktop-display"
-              src="https://d33wubrfki0l68.cloudfront.net/f525bebad8ec45967899542ab37f9756287e1bbf/b31d2/images/logo-light-desktop.png"
+              src="/logo-no-background.png"
               alt="oak harbor web designs logo"
               height="50"
             />
@@ -623,7 +625,8 @@
       </div>
       <div class="branding">
         <p>
-          Copyright &copy; 2024 | DigitalDreams Web Designs | All Rights Reserved
+          Copyright &copy; 2024 | DigitalDreams Web Designs | All Rights
+          Reserved
         </p>
       </div>
     </footer>
