--- a/index.html
+++ b/index.html
@@ -2246,7 +2246,7 @@
               </p> -->
               <button
                 class="button-solid"
-                onclick="location.href='https://www.valleyconstructionsupply.com/'"
+                onclick="window.open('https://apart-homes.vercel.app/', '_blank')"
                 type="button"
               >
                 VISIT APART
@@ -2255,11 +2255,11 @@
 
             <div class="example">
               <img
-                src="/Neon_Retro_Stars_Marketing_Mockup_Website_Instagram_Post_1_-removebg-preview(1).png"
+                src="/Neon_Retro_Stars_Marketing_Mockup_Website_Instagram_Post_3_-removebg-preview(1).png"
                 width="300px"
                 alt="hillbilly gyros website mock up"
               />
-              <h3>StayHome</h3>
+              <h3>GRILLI</h3>
               <h4>Nigeria</h4>
               <!-- <p>
                 AB's Hillbilly Gyros is a local fusion gyros restaurant that
@@ -2267,10 +2267,10 @@
               </p> -->
               <button
                 class="button-solid"
-                onclick="location.href='https://www.abshillbillygyros.com/'"
+                onclick="window.open('https://grilli-restaurant-gamma.vercel.app/', '_blank')"
                 type="button"
               >
-                VISIT STAYHOME
+                VISIT GRILLI
               </button>
             </div>
             <div class="example">
@@ -2289,7 +2289,7 @@
               </p> -->
               <button
                 class="button-solid"
-                onclick="location.href='https://www.drvictoriachan.com/'"
+                onclick="window.open('https://realtors-seven.vercel.app/', '_blank')"
                 type="button"
               >
                 VISIT REALTOR
@@ -2316,13 +2316,13 @@
               <div class="dash"></div>
             </div>
             <p>
-              My name is Ryan, I am a stay at home dad and web developer. I
-              started this business to help provide for the family while still
-              being able to be home and raise the kids. I spent a year and a
-              half teaching myself the right way to make websites and learning
-              to write the code myself. Now after being in business
-              professionally for over 5 years I have built hundreds websites and
-              have my method down to a science.
+              My name is Kolade, and I am a graduate of Mechatronics Engineering
+              and a passionate web developer. I started this business to not
+              only support my family but also to grow my career in a field I
+              love. For a year and a half, I dedicated myself to learning the
+              right way to create websites, mastering the art of coding and
+              design. Now, with over two years of experience in web development,
+              I've built several websites and developed my method down to a science.
               <a href="/html/about.html">LEARN MORE</a>
             </p>
           </div>
@@ -2331,9 +2331,9 @@
           <div class="partner">
             <img
               src="/Snapchat-1863708524_1-modified(1).png"
-              alt="picture of Ryan"
+              alt="picture of Kolade"
             />
-            <h3>Ryan P.</h3>
+            <h3>Kolade .O</h3>
             <h4>Owner/Developer</h4>
           </div>
         </div>
@@ -2613,10 +2613,10 @@
             <h2>Navigation</h2>
             <div aria-hidden="true" class="footer-line"></div>
             <a class="link" href="/">Home</a>
-            <a class="link" href="/html/about">About</a>
-            <a class="link-long" href="/html/services">Services</a>
+            <a class="link" href="/html/about.html">About</a>
+            <a class="link-long" href="/html/services.html">Services</a>
             <a class="link-long" href="/#portfolio">Portfolio</a>
-            <a class="link-long" href="/html/contact">Contact</a>
+            <a class="link-long" href="/html/contact.html">Contact</a>
             <a
               class="link-long"
               href="https://calendly.com/akoladeemmanuel14/30min"
@@ -2656,7 +2656,7 @@
         </p>
       </div>
     </footer>
-    <!-- 
+    
     <div class="banner">
       <div
         id="beta-form"
@@ -2692,7 +2692,7 @@
           Close
         </button>
       </div>
-    </div> -->
+    </div>
     <script
       defer
       src="https://d33wubrfki0l68.cloudfront.net/js/eef0025cd862cc3e03f8ff60b8943386d5df5d14/app.js"
