--- a/index.html
+++ b/index.html
@@ -2657,7 +2657,7 @@
       </div>
     </footer>
     
-    <div class="banner">
+    <!-- <div class="banner">
       <div
         id="beta-form"
         name="Beta Tester Form"
@@ -2690,7 +2690,7 @@
             height="20"
           />
           Close
-        </button>
+        </button> -->
       </div>
     </div>
     <script
